# rodent

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY  LICENSE-3RD-PARTY.md  README.md  console.cpp  console.hpp  main.cpp  main_loop.cpp  main_loop.hpp  mptest.cpp  mptest.hpp  rodent.pro  rodent.rc  rodent.sln  rodent.vcxproj  settings.cpp  settings.hpp
build_scripts/: load_deps.ps1  load_deps.sh  msvc_run_prepare.bat  pack_mingw.sh  pack_msvc.bat  vb.sh  vb_project  vb_tar_linux  vb_tar_win  vb_tar_win64
client/: ec_render.cpp  ec_render.hpp  effects.cpp  effects.hpp  gamepad.cpp  gamepad.hpp  level_map.cpp  level_map.hpp  player_ui.cpp  player_ui.hpp  plr_control.cpp  plr_control.hpp  plr_input.cpp  plr_input.hpp  presenter.cpp  presenter.hpp  replay.cpp  replay.hpp  replay_ser.hpp  resbase.cpp  resbase.hpp  sounds.cpp  sounds.hpp
core/: dbg_menu.cpp  dbg_menu.hpp  gamepad.cpp  gamepad.hpp  hard_paths.cpp  hard_paths.hpp  main.cpp  main_loop.cpp  main_loop.hpp  plr_control.cpp  plr_control.hpp  res_image.cpp  settings.cpp  settings.hpp  tui_layer.cpp  tui_layer.hpp  tui_surface.cpp  tui_surface.hpp  vig.cpp  vig.hpp
data/: settings.cfg.default
data/shaders/: aal  imm  imm_text  light_mask  light_rect  ps_calc  ps_draw  space_bg
data/shaders/pp/: aal_grid  bleed  smoke  smoke_mask
data/sounds/: LIST  env_bullet_hit.opus  env_drill_1.opus  env_drill_2.opus  env_drill_begin.opus  env_drill_end.opus  env_lightning.opus  env_ram.opus  env_shield_hit.opus  env_wallram.opus  explosion_2.opus  explosion_bot_1.opus  explosion_bot_2.opus  explosion_large.opus  misc_lockbeep.opus  misc_pingbeep.opus  misc_silence05.opus  obj_dispenser.opus  obj_dispenser_empty.opus  obj_dispenser_wait.opus  obj_door.opus  obj_drill_fizzle.opus  obj_minidock.opus  obj_teleport.opus  obj_teleport_activate.opus  obj_terminal_fail.opus  obj_terminal_ok.opus  objamb_conv.opus  objamb_cryo.opus  objamb_sciterm.opus  objamb_term_work.opus  objamb_term_work_end.opus  test_loud.opus  test_quiet.opus  ui_no_ammo.opus  ui_pickup.opus  ui_pickup_2.opus  ui_shield_ready.opus  wpn_barrage_begin.opus  wpn_barrage_loop.opus  (+37 more)
data/sounds/music/: LICENSE.txt  LIST  OMS_RFS 21 Into The Unknown.opus  OMS_RFS 22 Counter-Attack.opus  OMS_RFS 47 Beat 01.opus  OMS_RFS 49 Loading Menu-Screen Theme.opus  OMS_RFS 71 Continuum.opus  OMS_RFS 72 Continuum (Alternative).opus  OMS_RFS 78 Terminal Pt. 1.opus  OMS_RFS 81 Silence Of The Machines.opus  all.sh
game/: ai_logic.cpp  ai_logic.hpp  common_defs.hpp  damage.cpp  damage.hpp  entity.cpp  entity.hpp  game_core.cpp  game_core.hpp  game_info_list.cpp  game_info_list.hpp  game_mode.cpp  game_mode.hpp  game_utils.cpp  game_utils.hpp  level_ctr.cpp  level_ctr.hpp  level_gen.cpp  level_gen.hpp  logic.hpp  movement.cpp  movement.hpp  physics.cpp  physics.hpp  player.cpp  player.hpp  player_ctr.cpp  player_ctr.hpp  player_mgr.cpp  player_mgr.hpp  presenter.cpp  presenter.hpp  presenter_res.cpp  presenter_res.hpp  s_objs.cpp  s_objs.hpp  weapon.cpp  weapon.hpp  weapon_all.cpp  weapon_all.hpp
game_ai/: ai_algo.cpp  ai_algo.hpp  ai_common.hpp  ai_components.cpp  ai_components.hpp  ai_control.cpp  ai_control.hpp  ai_drone.cpp  ai_drone.hpp  ai_group.cpp  ai_group.hpp  ai_group_target.cpp  ai_group_target.hpp  ai_sim.cpp  ai_sim.hpp
game_ctr/: game_control.cpp  game_control.hpp  game_ui.cpp  game_ui.hpp
game_objects/: objs_basic.cpp  objs_basic.hpp  objs_creature.cpp  objs_creature.hpp  objs_player.cpp  objs_player.hpp  player.cpp  player.hpp  s_objs.cpp  s_objs.hpp  spawners.cpp  spawners.hpp  spawners2.cpp  tutorial.cpp  tutorial.hpp  weapon_all.cpp  weapon_all.hpp
render/: camera.cpp  camera.hpp  control.cpp  control.hpp  gl_utils.cpp  gl_utils.hpp  particles.cpp  particles.hpp  postproc.cpp  postproc.hpp  pp_graph.cpp  pp_graph.hpp  ren_aal.cpp  ren_aal.hpp  ren_imm.cpp  ren_imm.hpp  ren_light.cpp  ren_light.hpp  ren_particles.cpp  ren_particles.hpp  ren_text.cpp  ren_text.hpp  ren_tui.cpp  ren_tui.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
res/: LICENSE-fonts  help.txt  settings.cfg  settings.cfg.default
res/shaders/: aal  aal_inst  char_matrix  glow  imm  imm_text  ps.descr.txt  ps_calc  ps_draw  vert_pass  vert_pass_texel
res/shaders/pp/: aal_grid  bleed  gauss  hole  kuwahara  kuwahara_dir  pass  shake  tint
scripts/: FindENet.cmake  Findopusfile.cmake  Findportaudio.cmake  build.bat  build.ps1  build.sh  load_deps.ps1  pack.bat  rodent.bat
scripts/opusfile/: CMakeLists.txt
utils/: block_cfg.cpp  block_cfg.hpp  color_manip.cpp  color_manip.hpp  enet_wrap.cpp  enet_wrap.hpp  ev_signal.hpp  image_utils.cpp  image_utils.hpp  line_cfg.cpp  line_cfg.hpp  noise.cpp  noise.hpp  path_search.cpp  path_search.hpp  res_audio.cpp  res_audio.hpp  res_image.cpp  res_image.hpp  serializer.hpp  serializer_defs.hpp  serializer_dsl.hpp  serializer_guts.hpp  svg_simple.cpp  svg_simple.hpp  tcp_net.cpp  tcp_net.hpp  time_utils.cpp  time_utils.hpp  tokenread.cpp  tokenread.hpp
vaslib/: vas_atlas_packer.cpp  vas_atlas_packer.hpp  vas_containers.cpp  vas_containers.hpp  vas_cpp_utils.cpp  vas_cpp_utils.hpp  vas_file.cpp  vas_file.hpp  vas_font.cpp  vas_font.hpp  vas_log.cpp  vas_log.hpp  vas_math.cpp  vas_math.hpp  vas_misc.cpp  vas_misc.hpp  vas_string_utils.cpp  vas_string_utils.hpp  vas_time.cpp  vas_time.hpp  vas_types.hpp  wincompat.cpp  wincompat.hpp
